# Nyanziba_nav_core

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bindings/python/: bind_controllers.cpp  bind_grid_map.cpp  bind_mppi.cpp  bind_planners.cpp  bind_types.cpp  module.cpp
cmake/: texnitis_nav_coreConfig.cmake.in
demo/: README.md
demo/cpp/: CMakeLists.txt
demo/cpp/astar_lookahead/: README.md  main.cpp
demo/cpp/mppi/: README.md  main.cpp
demo/python/: README.md  astar_lookahead.py  mppi.py  simulator_demo.py
demo/python/maps/: corridor.yaml
docs/: architecture.md  design_rationale.md  index.md  kinematic_time_planner_design.md  porting_from_move_base_like.md  reading_guide.md
docs/algorithms/: astar.md  goal_checker.md  height_aware_astar.md  lookahead_controller.md  mecanum_kinematics.md  mppi.md  path_smoothing.md  pure_pursuit.md
docs/api/: cpp_api.md  python_api.md
docs/contributing/: benchmarking.md  release_process.md  testing.md
docs/testing/: kinematic_time_planner_test_basis.md
docs/usage/: move_base_flex_integration.md  parameters.md  quickstart_cpp.md  quickstart_python.md  simulator_guide.md
doxygen/: Doxyfile
include/texnitis_nav_core/: controller_base.hpp  goal_checker.hpp  grid_map_view.hpp  height_provider.hpp  logger.hpp  planner_base.hpp  result.hpp  types.hpp
include/texnitis_nav_core/controllers/: diff_drive_pure_pursuit_controller.hpp  diff_drive_pure_pursuit_params.hpp  lookahead_controller.hpp  lookahead_params.hpp
include/texnitis_nav_core/map_processing/: map_preprocessor.hpp  terrain_grid.hpp
include/texnitis_nav_core/motion_models/: differential_drive_motion_model.hpp  holonomic_motion_model.hpp  motion_model.hpp
include/texnitis_nav_core/mppi/: mecanum_kinematics.hpp  mecanum_mppi_controller.hpp  mppi_params.hpp
include/texnitis_nav_core/planners/: astar_params.hpp  astar_planner.hpp  height_aware_astar_params.hpp  height_aware_astar_planner.hpp  kinematic_time_astar_planner.hpp
include/texnitis_nav_core/terrain/: terrain_traversal_evaluator.hpp
python/texnitis_nav_core/: __init__.py
python/texnitis_nav_core/sim/: __init__.py  disturbance.py  kinematics.py  metrics.py  runner.py  visualize.py  world.py
scenarios/: README.md
sphinx/: conf.py  index.rst
src/controllers/: diff_drive_pure_pursuit_controller.cpp  lookahead_controller.cpp
src/map_processing/: map_preprocessor.cpp
src/motion_models/: differential_drive_motion_model.cpp  holonomic_motion_model.cpp  motion_model.cpp
src/mppi/: mecanum_kinematics.cpp  mecanum_mppi_controller.cpp
src/planners/: astar_planner.cpp  height_aware_astar_planner.cpp  kinematic_time_astar_planner.cpp
src/terrain/: terrain_traversal_evaluator.cpp
tests/: CMakeLists.txt  __init__.py  test_core_smoke.cpp  test_kinematic_time_astar.cpp  test_m2_planning.cpp  test_m4_height_purepursuit.cpp  test_m4_purepursuit.cpp  test_m5_mppi.cpp  test_map_preprocessor.cpp  test_motion_models.cpp
tests/legacy_harness/: CMakeLists.txt  README.md  __init__.py  c_api.cpp  c_api.hpp  legacy_runner.py  run_legacy.py
tests/legacy_harness/fake_node/: fake_node.cpp  fake_node.hpp
tests/scenarios/: README.md  SCHEMA.md
tests/scenarios/S-01/: scenario.yaml
tests/scenarios/S-02/: scenario.yaml
tests/scenarios/S-03/: scenario.yaml
tests/scenarios/S-04/: scenario.yaml
tests/scenarios/S-05/: scenario.yaml
tests/scenarios/S-06/: scenario.yaml
tests/scenarios/S-07/: scenario.yaml
tests/scenarios/S-08/: scenario.yaml
tests/scenarios/S-09/: scenario.yaml
tests/scenarios/S-10/: scenario.yaml
tests/scenarios/S-11/: scenario.yaml
tests/scenarios/S-12/: scenario.yaml
tests/scenarios/S-13/: scenario.yaml
tests/scenarios/S-14/: scenario.yaml
tests/scenarios/S-15/: scenario.yaml
tests/scenarios/S-16/: scenario.yaml
tests/scenarios/S-17/: scenario.yaml
tests_python/: test_bindings.py  test_sim_scenarios.py  test_smoke.py
