[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texnitis_nav_core"
version = "0.0.1"
description = "ROS-independent navigation core (A* / Pure Pursuit / MPPI) with Python bindings and a 2D simulator"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nyanziba" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
sim = [
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
dev = [
    "texnitis_nav_core[sim,test,docs]",
    "ruff>=0.4",
    "mypy>=1.10",
    "pydocstyle>=6.3",
]

# Build system note:
# Until milestone M7 lands the pybind11 _core extension, we install only
# the pure Python sources via setuptools. M7 will switch back to
# scikit-build-core so that pip install . compiles the native module too.

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests_python"]
markers = [
    "sim: scenario-driven simulator tests (may be slow / use matplotlib in headless mode)",
    "binding: low-level pybind11 binding sanity checks",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"
